<resources tools:ignore="MissingTranslation" xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">片语</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="setting">设置</string>
    <string name="love">我的喜欢</string>
    <string name="message">我的消息</string>

    <string name="action_img">图片</string>
    <string name="action_txt">文字</string>
    <string name="action_img_txt">图片+文字</string>
    <string name="action_crop">生成长图</string>
    <string name="action_share">分享</string>

</resources>
