<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2016 Yavor Ivanov
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/action_share"
        android:icon="@mipmap/action_img"
        android:orderInCategory="100"
        android:title="@string/action_share"
        app:showAsAction="never" />


    <item
        android:id="@+id/action_crop"
        android:icon="@mipmap/action_img"
        android:orderInCategory="100"
        android:title="@string/action_crop"
        app:showAsAction="never" />


    <item
        android:id="@+id/action_txt_img"
        android:icon="@mipmap/action_img"
        android:orderInCategory="100"
        android:title="@string/action_img_txt"
        app:showAsAction="never" />


    <item
        android:id="@+id/action_img"
        android:icon="@mipmap/action_img"
        android:orderInCategory="100"
        android:title="@string/action_img"
        app:showAsAction="never" />


    <item
        android:id="@+id/action_text"
        android:icon="@mipmap/action_txt"
        android:orderInCategory="100"
        android:title="@string/action_txt"
        app:showAsAction="never" />


</menu>
